--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: SmartInvs
-version: 1.2.7
+name: ${project.name}
+version: ${project.version}
 description: Inventory API for your Bukkit Plugins.
 author: MinusKube
 website: https://github.com/MinusKube/SmartInvs
